tests/ui/missing_field.stderr
error[E0063]: missing field `b` in initializer of `Foo`
  --> tests/ui/missing_field.rs:12:26
   |
12 |     let _foo = pin_init!(Foo { a: 0 });
   |                          ^^^ missing `b`

error[E0063]: missing field `b` in initializer of `Foo`
  --> tests/ui/missing_field.rs:13:30
   |
13 |     let _foo = try_pin_init!(Foo { a: 0 });
   |                              ^^^ missing `b`

error[E0063]: missing field `b` in initializer of `Foo`
  --> tests/ui/missing_field.rs:14:22
   |
14 |     let _foo = init!(Foo { a: 0 });
   |                      ^^^ missing `b`

error[E0063]: missing field `b` in initializer of `Foo`
  --> tests/ui/missing_field.rs:15:26
   |
15 |     let _foo = try_init!(Foo { a: 0 });
   |                          ^^^ missing `b`
